# slopOS

./: .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
linux-vm/: README.md
linux-vm/board/: normal-post-fakeroot.sh  post-build.sh  recovery-init.c  recovery-post-fakeroot.sh  recovery-toolbox.c
linux-vm/board/normal-rootfs-tree/etc/: inittab  resolv.conf.static
linux-vm/board/rootfs-overlay/: init
linux-vm/board/rootfs-overlay/etc/default/: dropbear
linux-vm/buildroot-external/: Config.in  external.desc  external.mk
linux-vm/configs/: busybox-no-login-no-shell.fragment  host-guest.env  slopos_aarch64_virt_defconfig  slopos_aarch64_virt_recovery_defconfig
linux-vm/pkgmgr/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-build/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-build/src/: lib.rs
linux-vm/pkgmgr/crates/sloppkg-cli/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-cli/src/: main.rs
linux-vm/pkgmgr/crates/sloppkg-core/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-core/src/: lib.rs
linux-vm/pkgmgr/crates/sloppkg-db/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-db/src/: lib.rs
linux-vm/pkgmgr/crates/sloppkg-repo/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-repo/src/: lib.rs
linux-vm/pkgmgr/crates/sloppkg-solver/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-solver/src/: lib.rs
linux-vm/pkgmgr/crates/sloppkg-types/: Cargo.toml
linux-vm/pkgmgr/crates/sloppkg-types/src/: lib.rs
linux-vm/rootfs/: bootstrap-manifest.toml
linux-vm/scripts/: audit-guest-ext4-sealing.sh  boot-selection.sh  build-guest-kernel-artifacts.sh  build-guest-rootfs-artifacts.sh  build-native-binutils.sh  build-native-gcc.sh  build-native-glibc.sh  build-phase2-lima.sh  build-phase2-linux.sh  build-phase2.sh  build-recovery-lima.sh  build-recovery-linux.sh  build-selfhost-binutils.sh  build-selfhost-gcc-final.sh  build-selfhost-gcc-intermediate.sh  build-selfhost-glibc.sh  build-selfhost-libs.sh  build-sloppkg-guest.sh  ensure-persistent-disk.sh  ensure-root-disk.sh  export-bootstrap-sdk.sh  guest-linker.py  host-preflight.sh  install-bootstrap-sdk.sh  install-sloppkg-guest-package.sh  prepare-guest-ssh.sh  promote-guest-boot-default.sh  promote-guest-kernel-candidate.sh  promote-guest-world.sh  publish-guest-http-repo.sh  rebuild-guest-world.sh  run-phase2.sh  run-recovery.sh  scp-from-guest.sh  scp-to-guest.sh  sloppkg.sh  ssh-guest.sh  sync-guest-world.sh  validate-busyboxless.sh  validate-guest-combined-boot-candidate.sh  (+7 more)
(+25 files in other folders)
