[workspace]
members = [
  "crates/sloppkg-build",
  "crates/sloppkg-cli",
  "crates/sloppkg-core",
  "crates/sloppkg-db",
  "crates/sloppkg-repo",
  "crates/sloppkg-solver",
  "crates/sloppkg-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5.35", features = ["derive", "env"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
zstd = "0.13.3"
