[package]
name = "sloppkg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sloppkg"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
sloppkg-core = { path = "../sloppkg-core" }
sloppkg-types = { path = "../sloppkg-types" }
