[package]
name = "sloppkg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
sloppkg-build = { path = "../sloppkg-build" }
sloppkg-db = { path = "../sloppkg-db" }
sloppkg-repo = { path = "../sloppkg-repo" }
sloppkg-solver = { path = "../sloppkg-solver" }
sloppkg-types = { path = "../sloppkg-types" }

[dev-dependencies]
